compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__immediately_called_anonymous_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  fn(a, b) { a + b }(1, 2)\n}\n"
---
----- SOURCE CODE

pub fn main() {
  fn(a, b) { a + b }(1, 2)
}


----- WARNING
warning: Immediately called anonymous function
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   fn(a, b) { a + b }(1, 2)
  │   ^^^^^^^^^^^^^^^^^^^^^^^^ This anonymous function is immediately called

This anonymous function is immediately called. It can be replaced with a
block expression.

Hint: Use a block expression with `let` bindings instead, for example: `{
let a = 1; let b = 2; a + b }`
