compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__importing_non_direct_dep_package.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 877
expression: "\nimport some_module\npub const x = some_module.x\n        "
---

warning: Transative dependency imported
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ import some_module
  │ ^^^^^^^^^^^^^^^^^^

The module `some_module` is being imported, but `non-dependency-package`,
the package it belongs to, is not a direct dependency of your package.
In a future version of Gleam this may become a compile error.

Run this command to add it to your dependencies:

    gleam add non-dependency-package


