compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__impossible_to_reach_int_segment.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main(x) {\n  case x {\n    <<9:size(2)>> -> True\n    _ -> False\n  }\n}"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    <<9:size(2)>> -> True
    _ -> False
  }
}

----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:4:5
  │
4 │     <<9:size(2)>> -> True
  │     ^^^^^^^^^^^^^
  │       │
  │       A 2 bits unsigned integer will never match this value

This pattern cannot be reached as it contains segments that will never
match.

Hint: It can be safely removed.
