compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__impure_fn_function_call_not_mark_as_unused.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n    fn(_) { panic }(1)\n    Nil\n}\n"
---
----- SOURCE CODE

pub fn main() {
    fn(_) { panic }(1)
    Nil
}


----- WARNING
warning: Immediately called anonymous function
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │     fn(_) { panic }(1)
  │     ^^^^^^^^^^^^^^^^^^ This anonymous function is immediately called

This anonymous function is immediately called. It can be replaced with a
block expression.

Hint: Use a block expression with `let` bindings instead, for example: `{
let a = 1; let b = 2; a + b }`
