compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__incomplete_code_block_raises_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n    {}\n}\n"
---
----- SOURCE CODE

pub fn main() {
    {}
}


----- WARNING
warning: Incomplete block
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │     {}
  │     ^^ This code is incomplete

A block must always contain at least one expression.

A todo expression has been use in place of the missing code,
so this code will crash if it is run. Be sure to finish it before
running your program.
